--- a/src/main.html
+++ b/src/main.html
@@ -128,6 +128,9 @@
     <script type="text/javascript" src="./js/DarkTheme.js"></script>
     <script type="text/javascript" src="./js/ConfigInserter.js"></script>
     <script type="text/javascript" src="./js/TuningSliders.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapComponent.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapCanvas.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapConfig.js"></script>
     <title i18n="windowTitle"></title>
 </head>
 <body>
