--- a/src/tabs/motors.html
+++ b/src/tabs/motors.html
@@ -108,13 +108,6 @@
 
           </div>
         </div>
-        <!--
-        <div class="gui_box grey">
-          <div class="spacer_box">
-              <a href="#" id="motorRemapDialogOpen" class="regular-button" i18n="motorRemapDialogOpen"></a>
-          </div>
-        </div>
-        -->
 
         <div class="gui_box motorblock">          
             <div class="spacer">
@@ -202,7 +195,7 @@
       <div id="dialogMotorRemapContent" class="component_wrapper" style="height: calc(100% - 40px);">
       </div>
       <div class="buttons right bottom" style="height: 40px">
-        <a href="#" id="dialogMotorRemap-closebtn"  class="regular-button" i18n="dialogMotorRemapClose"></a>
+        <a href="#" id="dialogMotorRemap-closebtn"  class="regular-button" i18n="motorRemapDialogClose"></a>
       </div>
     </dialog>
 </div>
