first fully working version

--- a/src/tabs/motors.html
+++ b/src/tabs/motors.html
@@ -192,9 +192,9 @@
     </div>
 
     <dialog id="dialogMotorRemap" style="width: 400px; height:440px;">
-      <div id="dialogMotorRemapContent" class="component_wrapper" style="height: calc(100% - 40px);">
+      <div id="dialogMotorRemapContent" class="component_wrapper" style="height: calc(100% - 35px);">
       </div>
-      <div class="buttons right bottom" style="height: 40px">
+      <div class="buttons right bottom">
         <a href="#" id="dialogMotorRemap-closebtn"  class="regular-button" i18n="motorRemapDialogClose"></a>
       </div>
     </dialog>
