--- a/src/tabs/motors.html
+++ b/src/tabs/motors.html
@@ -8,7 +8,7 @@
             <div class="wrapper modelAndGraph">
                 <div class="mixerPreview">
                     <img src="./resources/motor_order/custom.svg" />
-                </div>                
+                </div>
                 <svg id="graph">
                  <g class="grid x" transform="translate(40, 120)"></g>
                  <g class="grid y" transform="translate(40, 10)"></g>
@@ -98,7 +98,7 @@
                     </div>
                   </div>
                 </div>
-            </div>            
+            </div>
             <div class="power_info">
                 <a href="#" id="motorRemapDialogOpen" class="regular-button" i18n="motorRemapDialogOpen"></a>
                 <span i18n="motorsVoltage" class="power_text"></span><span class="motors-bat-voltage power_value"></span>
@@ -108,8 +108,7 @@
 
           </div>
         </div>
-
-        <div class="gui_box motorblock">          
+        <div class="gui_box motorblock">
             <div class="spacer">
                 <div class="left motors">
                     <div class="title2" i18n="motorsText"></div>
@@ -191,11 +190,15 @@
         </div>
     </div>
 
+    <!--<dialog id="dialogMotorRemap" style="width: 400px; height:440px;">-->
     <dialog id="dialogMotorRemap" style="width: 400px; height:440px;">
-      <div id="dialogMotorRemapContent" class="component_wrapper" style="height: calc(100% - 35px);">
-      </div>
-      <div class="buttons right bottom">
-        <a href="#" id="dialogMotorRemap-closebtn"  class="regular-button" i18n="motorRemapDialogClose"></a>
+      <div style=" display: flex; flex-flow: column; width: 100%; height: 100%;">
+        <div id="dialogMotorRemapContent" class="component_wrapper" style="flex-grow: 1;">
+          display:flex; flex-flow:column;
+        </div>
+        <div class="">
+          <a href="#" id="dialogMotorRemap-closebtn"  class="regular-button right" i18n="motorRemapDialogClose"></a>
+        </div>
       </div>
     </dialog>
 </div>
