--- a/src/main.html
+++ b/src/main.html
@@ -36,6 +36,7 @@
     <link type="text/css" rel="stylesheet" href="./css/opensans_webfontkit/fonts.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/dropdown-lists/css/style_lists.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./js/libraries/switchery/switchery.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./components/motor_remap/styles.css" media="all"/>
 
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" media="all" disabled/>
 
@@ -127,6 +128,9 @@
     <script type="text/javascript" src="./js/DarkTheme.js"></script>
     <script type="text/javascript" src="./js/ConfigInserter.js"></script>
     <script type="text/javascript" src="./js/TuningSliders.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapComponent.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapCanvas.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapConfig.js"></script>
     <title i18n="windowTitle"></title>
 </head>
 <body>
