Motor remap feature

--- a/src/main.html
+++ b/src/main.html
@@ -38,6 +38,7 @@
     <link type="text/css" rel="stylesheet" href="./css/dropdown-lists/css/style_lists.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./js/libraries/switchery/switchery.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./components/motor_remap/styles.css" media="all"/>
 
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" media="all" disabled/>
 
@@ -134,6 +135,9 @@
     <script type="text/javascript" src="./js/TuningSliders.js"></script>
     <script type="text/javascript" src="./js/phones_ui.js"></script>
     <script type="text/javascript" src="./node_modules/jquery-touchswipe/jquery.touchSwipe.min.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapComponent.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapCanvas.js"></script>
+    <script type="text/javascript" src="./components/motor_remap/MotorRemapConfig.js"></script>
     <title i18n="windowTitle"></title>
 </head>
 <body>
