--- a/src/main.html
+++ b/src/main.html
@@ -39,6 +39,7 @@
     <link type="text/css" rel="stylesheet" href="./js/libraries/switchery/switchery.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./components/motor_remap/styles.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./components/motor_output_reordering/styles.css" media="all"/>
 
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" media="all" disabled/>
 
@@ -138,6 +139,9 @@
     <script type="text/javascript" src="./components/motor_remap/MotorRemapComponent.js"></script>
     <script type="text/javascript" src="./components/motor_remap/MotorRemapCanvas.js"></script>
     <script type="text/javascript" src="./components/motor_remap/MotorRemapConfig.js"></script>
+    <script type="text/javascript" src="./components/motor_output_reordering/MotorOutputReorderingComponent.js"></script>
+    <script type="text/javascript" src="./components/motor_output_reordering/MotorOutputReorderingCanvas.js"></script>
+    <script type="text/javascript" src="./components/motor_output_reordering/MotorOutputReorderingConfig.js"></script>
     <title i18n="windowTitle"></title>
 </head>
 <body>
