--- a/src/tabs/motors.html
+++ b/src/tabs/motors.html
@@ -191,10 +191,9 @@
         <div class="clear-both"></div>
     </div>
 
-    <dialog id="dialogMotorOutputReorder" style="width: 400px; height:440px;">
-      <div style=" display: flex; flex-flow: column; width: 100%; height: 100%;">
-        <div id="dialogMotorOutputReorderContent" class="component_wrapper" style="flex-grow: 1;">
-          display:flex; flex-flow:column;
+    <dialog id="dialogMotorOutputReorder">
+      <div id="dialogMotorOutputReorderContentWrapper">
+        <div id="dialogMotorOutputReorderContent">
         </div>
         <div class="">
           <a href="#" id="dialogMotorOutputReorder-closebtn"  class="regular-button right" i18n="motorOutputReorderDialogClose"></a>
