Board orientation work started

--- a/src/main.html
+++ b/src/main.html
@@ -127,6 +127,7 @@
     <script type="text/javascript" src="./js/DarkTheme.js"></script>
     <script type="text/javascript" src="./js/ConfigInserter.js"></script>
     <script type="text/javascript" src="./js/TuningSliders.js"></script>
+    <script type="text/javascript" src="./components/board_alignment/BoardAlignmentComponent.js"></script>
     <title i18n="windowTitle"></title>
 </head>
 <body>
