--- a/src/tabs/setup.html
+++ b/src/tabs/setup.html
@@ -163,6 +163,15 @@
                     <span id="attitude"></span> <span id="heading"></span>
                 </div>
             </div>
+            <div class="spacer_left">
+                <div class="gui_box grey instrumentsbox" align="center">
+                    <div class="gui_box_titlebar" align="left">
+                        <div class="spacer_box_title" i18n="boardAlignmentComponentHead"></div>
+                    </div>
+                    <div id="boardAlignmentComponentContent">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
