--- a/src/main.html
+++ b/src/main.html
@@ -22,6 +22,9 @@
     <link type="text/css" rel="stylesheet" href="./css/tabs/led_strip.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/tabs/sensors.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/tabs/cli.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./tabs/presets/presets.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./tabs/presets/TitlePanel/PresetTitlePanel.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./tabs/presets/DetailedDialog/PresetsDetailedDialog.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/tabs/logging.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/tabs/onboard_logging.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/tabs/firmware_flasher.css" media="all"/>
@@ -42,6 +45,7 @@
     <link type="text/css" rel="stylesheet" href="./components/MotorOutputReordering/Styles.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./css/select2_custom.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./node_modules/select2/dist/css/select2.min.css" media="all"/>
+    <link type="text/css" rel="stylesheet" href="./node_modules/multiple-select/dist/multiple-select.min.css" media="all"/>
     <link type="text/css" rel="stylesheet" href="./components/EscDshotDirection/Styles.css" media="all"/>
 
     <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" media="all" disabled/>
@@ -126,6 +130,12 @@
     <script type="text/javascript" src="./js/tabs/cli.js"></script>
     <!-- TODO: might be removed when everythign is in modules -->
     <script type="module" src="./js/tabs/logging.js"></script>
+    <script type="text/javascript" src="./tabs/presets/presets.js"></script>
+    <script type="text/javascript" src="./tabs/presets/CliEngine.js"></script>
+    <script type="text/javascript" src="./tabs/presets/DetailedDialog/PresetsDetailedDialog.js"></script>
+    <script type="text/javascript" src="./tabs/presets/TitlePanel/PresetTitlePanel.js"></script>
+    <script type="text/javascript" src="./tabs/presets/PresetsRepoIndexed/PresetsRepoIndexed.js"></script>
+    <script type="text/javascript" src="./js/tabs/logging.js"></script>
     <script type="text/javascript" src="./js/tabs/onboard_logging.js"></script>
     <script type="text/javascript" src="./js/FirmwareCache.js"></script>
     <script type="text/javascript" src="./js/tabs/failsafe.js"></script>
@@ -145,6 +155,7 @@
     <script type="text/javascript" src="./components/MotorOutputReordering/MotorOutputReorderingCanvas.js"></script>
     <script type="text/javascript" src="./components/MotorOutputReordering/MotorOutputReorderingConfig.js"></script>
     <script type="text/javascript" src="./node_modules/select2/dist/js/select2.min.js"></script>
+    <script type="text/javascript" src="./node_modules/multiple-select/dist/multiple-select.min.js"></script>
     <script type="text/javascript" src="./js/utils/EscProtocols.js"></script>
     <script type="text/javascript" src="./js/utils/DshotCommand.js"></script>
     <script type="text/javascript" src="./components/EscDshotDirection/EscDshotDirectionComponent.js"></script>
@@ -358,6 +369,9 @@
                 <ul class="mode-connected mode-connected-cli">
                     <li class="tab_cli">
                         <a href="#" i18n="tabCLI" class="tabicon ic_cli" i18n_title="tabCLI"></a>
+                    </li>
+                    <li class="tab_presets">
+                        <a href="#" i18n="tabPresets" class="tabicon ic_wizzard" i18n_title="tabPresets"></a>
                     </li>
                 </ul>
             </div>
